eureka service registry added